December 3, 2014
----------------

- Deploy support for some type changes in GoDynamo.


October 27, 2014
----------------

- Bring bbpd into conformance with DynamoDB changes made by AWS in October 2014.

- Support graceful shutdown.
