@@ -1,3 +1,11 @@
+December 9, 2014
+----------------
+
+- Remove support for query parameters "compact" and "indent" in favor
+  of http headers X-Bbpd-Verbose and X-Bbpd-Inent. Default behavior now
+  is compact and unindented output by default. To override, set the
+  aforementioned headers with any value.
+
 December 3, 2014
 ----------------
 
@@ -10,4 +18,3 @@ October 27, 2014
 - Bring bbpd into conformance with DynamoDB changes made by AWS in October 2014.
 
 - Support graceful shutdown.
-
